updated the multiple trace streaming page

--- a/_posts/user_guide_python/multiple-trace-streaming.ipynb
+++ b/_posts/user_guide_python/multiple-trace-streaming.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -101,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nhlxf6ig3d\n",
-      "cew1sbgo4s\n"
+      "0xhh453c6m\n",
+      "4lm5a0gsr8\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -142,28 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/1.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trace1 = go.Scatter(x=[], y=[], stream=stream_id1)\n",
-    "trace2 = go.Scatter(x=[], y=[], stream=stream_id2, yaxis='y2')\n",
+    "trace1 = go.Scatter(x=[], y=[], stream=stream_id1, name='trace1')\n",
+    "trace2 = go.Scatter(x=[], y=[], stream=stream_id2, yaxis='y2', name='trace2', marker=dict(color='rgb(148, 103, 189)'))\n",
     "\n",
     "data = [trace1, trace2]\n",
     "layout = go.Layout(\n",
@@ -185,7 +171,14 @@
     ")\n",
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='multple-trace-axes-streaming')"
+    "plot_url = py.plot(fig, filename='multple-trace-axes-streaming')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://cloud.githubusercontent.com/assets/12302455/14962778/85b8f358-106e-11e6-8c1b-33419fb02ebe.png)"
    ]
   },
   {
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -240,6 +233,31 @@
     "    time.sleep(0.8)\n",
     "s_1.close()\n",
     "s_2.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/1.embed\" height=\"525\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tls.embed('demo_account','1')"
    ]
   },
   {
