--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now you can implement range sliders and selectors <br>in your Plotly graphs purely with <b>python</b>!!!\n",
+    "#### Now you can implement range sliders and selectors <br>in your Plotly graphs purely with python!\n",
     "New to our python API?<br>\n",
     "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
     "Find your api_key here: https://plot.ly/settings/api"
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11581.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11583.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -172,20 +172,6 @@
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\r\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
      ]
     }
    ],
