--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -4,15 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WebGL vs SVG in Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now in Ploty you can implement WebGL with `Scattergl()` in place of `Scatter()` <br>\n",
-    "for increased speed, improved interactivity, and the ability to plot even more data!"
+    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
+    "Find your api_key here: https://plot.ly/settings/api"
    ]
   },
   {
@@ -25,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.8.12'"
+       "'1.9.10'"
       ]
      },
      "execution_count": 1,
@@ -36,14 +29,6 @@
    "source": [
     "import plotly\n",
     "plotly.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
-    "Find your api_key here: https://plot.ly/settings/api"
    ]
   },
   {
@@ -64,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####WebGL with 100,000  points"
+    "#### WebGL with 100,000  points"
    ]
   },
   {
@@ -113,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####WebGL with 1 Million Points"
+    "#### WebGL with 1 Million Points"
    ]
   },
   {
@@ -163,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####WebGL with many traces"
+    "#### WebGL with many traces"
    ]
   },
   {
@@ -211,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Reference"
+    "#### Reference"
    ]
   },
   {
@@ -223,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -256,19 +241,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-MZfPfk-build\n",
+      "  Requirement already satisfied (use --upgrade to upgrade): publisher==0.10 from git+https://github.com/plotly/publisher.git in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -278,15 +255,16 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'webgl.ipynb', 'python/webgl-vs-svg', 'Python WebGL vs SVG | plotly',\n",
     "    'Using WebGL with Scattergl() in Python with Plotly. '\n",
-    "    'Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.',\n",
+    "    'Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!',\n",
+    "    title = 'Python WebGL vs SVG | plotly',\n",
     "    name = 'WebGL vs SVG',\n",
     "    thumbnail='/images/webgl.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=3)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=1)"
    ]
   },
   {
@@ -315,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
