--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -258,7 +258,7 @@
     "! pip install git+https://github.com/plotly/publisher.git\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'webgl.ipynb', 'python/webgl-vs-svg', 'Python WebGL vs SVG | plotly',\n",
+    "    'webgl.ipynb', 'python/webgl-vs-svg/', 'Python WebGL vs SVG | plotly',\n",
     "    'Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!',\n",
     "    title = 'Python WebGL vs SVG | plotly',\n",
     "    name = 'WebGL vs SVG',\n",
