--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now you can implement range sliders and selectors <br>in your Plotly graphs purely with python!\n",
     "New to our python API?<br>\n",
     "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
     "Find your api_key here: https://plot.ly/settings/api"
@@ -48,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Import Data"
+    "##### Create a Graph with Range Selectors and a Range Slider"
    ]
   },
   {
@@ -57,45 +56,29 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11587.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "import pandas.io.data as web\n",
     "\n",
     "df = web.DataReader(\"aapl\", 'yahoo',\n",
     "                    datetime(2007, 10, 1),\n",
-    "                    datetime(2009, 4, 1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Create a Graph with Range Selectors and a Range Slider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11583.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "                    datetime(2009, 4, 1))\n",
+    "\n",
     "trace = go.Scatter(x=df.index,\n",
     "                   y=df.High)\n",
     "\n",
@@ -164,15 +147,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
-      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\r\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
-     ]
     }
    ],
    "source": [
@@ -181,11 +155,11 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'range-slider.ipynb', 'python/range-slider/', 'Python Range Slider and Selectors | plotly',\n",
-    "    'Create graphs with range sliders and range selectors in Python with Plotly.',\n",
+    "    'Now you can implement range sliders and selectors in your Plotly graphs purely with python!',\n",
+    "    title = 'Python Range Slider and Selectors | plotly',\n",
     "    name = 'Range Slider and Selector',\n",
     "    thumbnail='thumbnail/sliders.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=9)"
