--- a/_posts/python/3d-ribbon/ribbon.ipynb
+++ b/_posts/python/3d-ribbon/ribbon.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ribbon Plots in Python"
+    "New to Plotly's Python API? <br>\n",
+    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
+    "Find your api_key here: https://plot.ly/settings/api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic Ribbon Plot"
    ]
   },
   {
@@ -16,44 +25,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'1.8.8'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Ribbon Plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8748.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11589.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,19 +109,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-MdKN8j-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -152,10 +128,10 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ribbon.ipynb', 'python/ribbon-plots', 'Python Ribbon Plots | plotly',\n",
+    "    'ribbon.ipynb', 'python/ribbon-plots/', 'Python Ribbon Plots | plotly',\n",
     "    'How to make ribbon plots in Python. ',\n",
     "    name = 'Ribbon Plots',\n",
     "    thumbnail='/images/ribbon-plot.png', language='python',\n",
@@ -188,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
