--- a/_posts/user_guide_python/multiple-trace-streaming.ipynb
+++ b/_posts/user_guide_python/multiple-trace-streaming.ipynb
@@ -4,22 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to Plotly's Python API User Guide. \n",
-    "\n",
-    "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Check which version is installed on your machine and please upgrade if needed. "
    ]
   },
@@ -223,21 +207,23 @@
     "import numpy as np\n",
     "\n",
     "k=10\n",
+    "i=0\n",
     "\n",
-    "for i in range(200):\n",
+    "while True:\n",
     "    x = datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S.%f')\n",
-    "    delta = np.random.randint(0,4) \n",
+    "    delta = np.random.randint(4,10) \n",
     "    y = (np.cos(k*i/50.)*np.cos(i/50.)+np.random.randn(1))[0] \n",
     "    s_1.write(dict(x=x,y=y))\n",
-    "    s_2.write(dict(x=x,y=(delta*y)))\n",
+    "    s_2.write(dict(x=x,y=(-delta*y)))\n",
     "    time.sleep(0.8)\n",
+    "    i += 1\n",
     "s_1.close()\n",
     "s_2.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -245,24 +231,24 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/1.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~streaming-demos/124.embed\" height=\"525\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tls.embed('demo_account','1')"
+    "tls.embed('streaming-demos','124')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -295,17 +281,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "Collecting publisher from https://pypi.python.org/packages/ad/a7/d5ed32efd56d021242e53b3c03aec8c4a705ea2ce9b2ed453b349fa9e965/publisher-0.11.tar.gz#md5=c9835b861ffca24364e63bf5f398652b\n",
+      "  Using cached publisher-0.11.tar.gz\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher\n",
+      "Successfully installed publisher-0.11\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
-      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
+      "\n",
+      "Your URL has more than 2 parts... are you sure?\n",
+      "\n"
      ]
     }
    ],
