--- a/_posts/user_guide_python/subplot-streaming.ipynb
+++ b/_posts/user_guide_python/subplot-streaming.ipynb
@@ -4,22 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to Plotly's Python API User Guide. \n",
-    "\n",
-    "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Check which version is installed on your machine and please upgrade if needed. "
    ]
   },
@@ -143,15 +127,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +142,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +158,8 @@
     "    yaxis='y2',\n",
     "    marker=dict(color=\"maroon\"),\n",
     "    name='Random Numbers',\n",
-    "    stream=stream_id2\n",
+    "    stream=stream_id2,\n",
+    "    showlegend=False\n",
     ")\n",
     "trace2 = go.Pie(\n",
     "    labels=['one','two','three'],\n",
@@ -189,7 +167,8 @@
     "    domain=dict(x=[0, 0.45]),\n",
     "    text=['one', 'two', 'three'],\n",
     "    stream=stream_id1,\n",
-    "    sort=False\n",
+    "    sort=False,\n",
+    "    \n",
     ")\n",
     "data = [trace1, trace2]\n",
     "layout = go.Layout(\n",
@@ -215,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -233,13 +212,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll run this stream for 200 updates as an example:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -254,15 +226,45 @@
     "import datetime\n",
     "import numpy as np\n",
     "\n",
-    "k=10\n",
-    "\n",
-    "for i in range(200):\n",
+    "while True:\n",
     "    nums = np.random.random_integers(0,10, size=(3))\n",
     "    s_1.write(dict(labels=['one', 'two', 'three'], values=nums, type='pie'))\n",
     "    s_2.write(dict(x=['one', 'two', 'three'], y=nums, type='bar', marker=dict(color=[\"blue\", \"orange\", \"green\"])))\n",
     "    time.sleep(0.8)\n",
     "s_1.close()\n",
-    "s_2.close()\n"
+    "s_2.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see this stream live below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~streaming-demos/122.embed\" height=\"525\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tls.embed('streaming-demos','122')"
    ]
   },
   {
