python basic charts rm title nb cell 1

--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -4,9 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "New to our python API?<br>\n",
+    "#### API Authentication\n",
+    "New to Plotly's python API? <br> \n",
     "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
     "Find your api_key here: https://plot.ly/settings/api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version Check\n",
+    "Note: range sliders and range selectors are available in version <b>1.9.7+</b><br>\n",
+    "Run  `pip install plotly --upgrade` to update your Plotly version"
    ]
   },
   {
@@ -29,8 +39,6 @@
    ],
    "source": [
     "import plotly\n",
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go \n",
     "\n",
     "plotly.__version__"
    ]
@@ -39,15 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: range sliders and range selectors are available in version <b>1.9.7+</b><br>\n",
-    "Run  `pip install plotly --upgrade` to update your Plotly version"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Create a Graph with Range Selectors and a Range Slider"
+    "#### Basic Range Selectors and a Range Slider"
    ]
   },
   {
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11587.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11593.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -72,6 +72,9 @@
     }
    ],
    "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go \n",
+    "\n",
     "from datetime import datetime\n",
     "import pandas.io.data as web\n",
     "\n",
@@ -118,6 +121,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/#layout-xaxis-rangeselector <br>and https://plot.ly/python/reference/#layout-xaxis-rangeslider <br>for more information and attribute options!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -155,6 +166,7 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'range-slider.ipynb', 'python/range-slider/', 'Python Range Slider and Selectors | plotly',\n",
