more old title cell removal

--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -761,7 +761,7 @@
     "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'lines.ipynb', 'python/line-charts', 'Python Line Charts | plotly',\n",
+    "    'lines.ipynb', 'python/line-charts/', 'Python Line Charts | plotly',\n",
     "    'How to make line charts in Python with Plotly. '\n",
     "    'Examples on creating and styling line charts in Python with Plotly.',\n",
     "    title = 'Python Line Charts | plotly',\n",
