changed the thumbnail link

--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -835,7 +835,7 @@
     "    'python_streaming', 'python/streaming-tutorial//', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming', name='Getting Started with Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
-    "    thumbnail='http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif', language='python',\n",
+    "    thumbnail='thumbnail/streaming-thumb-square.gif', language='python',\n",
     "    layout='user-guide', has_thumbnail='true') "
    ]
   },
